objects/z_FieldDescription__c.object
<CustomObject>
    <description>Created by the Metadata API</description>
    <fields>
        <fullName>byteLength__c</fullName>
        <label>byteLength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>calculatedFormula__c</fullName>
        <label>calculatedFormula</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>defaultValueFormula__c</fullName>
        <label>defaultValueFormula</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>digits__c</fullName>
        <label>digits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inlineHelpText__c</fullName>
        <label>inlineHelpText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAccessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAutoNumer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAutoNumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCaseSensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCaseSensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCreateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDefaultedOnCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDefaultedOnCreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDependentPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDependentPicklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeprecatedAndHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeprecatedAndHidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExternalID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isExternalID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFilterable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFilterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGroupable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGroupable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isHtmlFormatted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isHtmlFormatted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isIdLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isIdLookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNameField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNameField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNamePointing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNamePointing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNillable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNillable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRestrictedPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRestrictedPicklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSortable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSortable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUnique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUnique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUpdateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUpdateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWriteRequiredMasterRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWriteRequiredMasterRead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>label__c</fullName>
        <label>label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>length__c</fullName>
        <label>length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>localName__c</fullName>
        <label>localName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklistentries__c</fullName>
        <label>picklistentries</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>precision__c</fullName>
        <label>precision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>relationshipName__c</fullName>
        <label>relationshipName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationshipOrder__c</fullName>
        <label>relationshipOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scale__c</fullName>
        <label>scale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soaptype__c</fullName>
        <label>soptype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_SObjectDescription__c</fullName>
        <label>z_SObjectDescription</label>
        <referenceTo>z_SObjectDescription__c</referenceTo>
        <relationshipName>z_FieldDescription</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SObjectField</label>
    <nameField>
        <label>SObjectField Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>